# gendiff

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
fixtures/: json_expected.json  pretty_expected
src/: ast.rs  formatters.rs  lib.rs  main.rs
src/formatters/: json.rs  mod.rs  plain.rs  pretty.rs
