[package]
name = "gendiff"
description = "Generate diff"
version = "1.0.0"
authors = ["Mikhail Negrii <nemialtred@yandex.ru>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde_json = { version = "1.0.134", features = ["preserve_order"] }
serde_yaml = "0.9.34+deprecated"
serde = { version = "1.0.216", features = ["derive"] }

[profile.release]
strip = true
